# site-calibration

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  reporte_validated_helmert.md
.github/workflows/: sync_to_drive.yml
docs/: calibration.md  index.html
scripts/: verify_api.py
src/sitecal/: cli.py  io.py
src/sitecal/api/: main.py  schemas.py
src/sitecal/core/: calibration_engine.py  projections.py
src/sitecal/infrastructure/: reports.py
src/sitecal/ui/: app.py
