[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitecal"
version = "0.1.0"
description = "Industry-standard site calibration and coordinate transforms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "pyproj",
  "pydantic",
  "beautifulsoup4",
  "lxml",
  "pandas",
  "typer",
  "rich",
  "tabulate",
  "tabulate",
  "pytz",
  "streamlit",
]

[project.scripts]
sitecal = "sitecal.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sitecal*"]
